--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employee1?createDatabaseIfNotExist=true
+server.port=8080
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.password=root
 spring.datasource.username=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/employee1
 
+#For creating tables automatic
 spring.jpa.hibernate.ddl-auto=update
+
+#For visibility of SQL queries
+spring.jpa.show-sql=true
